<resources>
    <string name="app_name">My PortFolio</string>
    <string name="olugbohunmi_joseph">OLUGBOHUNMI Joseph</string>
    <string name="https_web_facebook_com_olugbohunmi">https://web.facebook.com/olugbohunmi</string>
    <string name="programmer_database_developer_project_manager_cyclist_agriculturist_food_security_advocate">Programmer | Database Developer | Project Manager | Cyclist | Agriculturist | Food Security Advocate</string>
    <string name="mayorjay1">\@mayorjay1</string>
    <string name="mayorjay_1">\@mayorjay_1</string>
    <string name="https_plus_google_com_u_1_115086118161874552233">https://plus.google.com/u/1/115086118161874552233</string>
    <string name="https_www_linkedin_com_comm_in_joseph_olugbohunmi">https://www.linkedin.com/comm/in/joseph-olugbohunmi</string>
    <string name="_234_806_295_1693_234_808_080_0989">+234 806 295 1693; +234 808 080 0989</string>
    <string name="joseolu4gsm_yahoo_com">joseolu4gsm@yahoo.com</string>
</resources>
